# TINY

./: .gitignore  CMakeLists.txt  Language.cpp  Language.h  Logger.cpp  Run_Loop.cpp  Tiny.cpp  Tiny.h  TokenQueue.cpp  Tokenizer.cpp  VariableManager.cpp  example.tiny  main.cpp  readme.md
headers/: Language.h  Logger.h  Run_Loop.h  Tiny.h  TokenQueue.h  Tokenizer.h  VariableManager.h
types/: Colour.h  OutputType.h  Token.h
